--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.0.1",
     "lucide-react": "^0.525.0",
     "mongoose": "^8.16.1",
     "next": "15.3.4",
