--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,10 @@ yarn-error.log*
 # vercel
 .vercel
 
+# uploads (exclude all files but keep .gitkeep)
+/public/uploads/*/*
+!/public/uploads/*/.gitkeep
+
 # typescript
 *.tsbuildinfo
 next-env.d.ts
