fix: admin page maintenance

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ CLOUDINARY_API_KEY=your-api-key
 CLOUDINARY_API_SECRET=your-api-secret
 
 # MongoDB Connection (Required for database)
-MONGODB_URI=mongodb://localhost:27017/tang-mow-hotel
+MONGODB_URI=mongodb://localhost:27017/hotelDB
 
 # NextAuth Configuration (Required for authentication)
 NEXTAUTH_SECRET=your-nextauth-secret-here
